--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,20 @@
-:root {
-   --cor-de-fundo:   #EBECEE;
+@import url(styles/header.css);
+@import url(styles/banner.css);
+@import url(styles/carrossel.css);
+
+:root{
+    --background: #ebecee;
+    --branco:#fff;
+    --preto: #000;
+    --laranja: #EB9B00;
+    --degrade-azul: linear-gradient(97.54deg, #002F52 35.49%, #326589 156.37%);
+    --azul: #002F52;
+    --fonte: 'Poppins', sans-serif;
 }
+
 body{
-   background-color: var(--cor-de-fundo);
-}
-
-
-h1 {
-   background-color: white;
-    
-
-
+    background-color: var(--background);
+    font-family: var(--fonte);
+    font-size: 16px;
+    font-weight: 400;
 }
